fix: update rfc compliance, tune health and ready endpoints
